-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
-
b09
-
aarch64
-
linux
Same issue as JDK-8256056 fixed on x86. The following can crash when run on AArch64:
make exploded-test TEST="jdk/incubator/vector" JTREG="VM_OPTIONS=-XX:+DeoptimizeALot -XX:DeoptimizeALotInterval=0"
make exploded-test TEST="jdk/incubator/vector" JTREG="VM_OPTIONS=-XX:+DeoptimizeALot -XX:DeoptimizeALotInterval=0"