src/hotspot/share/prims/vectorSupport.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -135,10 +135,18 @@ Handle VectorSupport::allocate_vector_payload_helper(InstanceKlass* ik, frame* f
     VMReg vreg = VMRegImpl::as_VMReg(location.register_number());
 
     for (int i = 0; i < num_elem; i++) {
-      int vslot = (i * elem_size) / VMRegImpl::stack_slot_size;
-      int off   = (i * elem_size) % VMRegImpl::stack_slot_size;
+      bool contiguous = X86_ONLY(false) NOT_X86(true);
+      address elem_addr;
 
-      address elem_addr = reg_map->location(vreg->next(vslot)) + off;
+      if (contiguous) {
+        elem_addr = reg_map->location(vreg) + (i * elem_size);
+      } else {
+        int vslot = (i * elem_size) / VMRegImpl::stack_slot_size;
+        int off   = (i * elem_size) % VMRegImpl::stack_slot_size;
+
+        elem_addr = reg_map->location(vreg->next(vslot)) + off;
+      }
+
       init_payload_element(arr, is_mask, elem_bt, i, elem_addr);
     }
   } else {
